Update navbar to fixed, add padding-top for all sections to be visible when using scrollspy

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   text-align: center;
   min-height: 100vh; 
-  width: 100%;
   background-color: black;
   color: white;
   display: flex;
@@ -9,4 +8,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+}
+
+h1 {
+  padding-top: 90px;
 }
